Fix card-testimonial and card-avatar class order for improved layout and adjust padding for better spacing

--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -245,7 +245,7 @@ ul.row {
     text-align: center;
 }
 
-.card-avatar .card-testimonial {
+.card-testimonial .card-avatar {
     border-radius: 50%;
     width: 10rem;
     height: 10rem;
@@ -253,6 +253,6 @@ ul.row {
 
 .carte.quote .card-testimonial cite {
     display: block;
-    padding: 1rem;
+    padding-top: 1rem;
     color: var(--color-primary);
 }
